--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,23 +26,24 @@
             android:ems="10"
             android:id="@+id/unetiEdit"
             android:textSize="32sp"
-            android:layout_marginLeft="24sp"
-            android:layout_marginTop="52sp"
-            android:layout_marginRight="24sp"
-            android:layout_marginBottom="24sp"
-            android:hint="Enter weight "
+            android:layout_marginLeft="16sp"
+            android:layout_marginTop="16sp"
+            android:layout_marginRight="16sp"
+            android:layout_marginBottom="16sp"
+            android:hint="@string/zaUneti"
             android:ellipsize="start"
-            android:gravity="center_horizontal"/>
+            android:gravity="center_horizontal"
+            />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="kg -> lbs"
+            android:text="@string/funte"
             android:id="@+id/lbsTxt"
-            android:textSize="32sp"
+            android:textSize="24sp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="24sp" />
+            android:layout_marginTop="16sp" />
 
         <EditText
             android:layout_width="match_parent"
@@ -53,9 +54,9 @@
             android:textSize="32sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="0sp"
-            android:layout_marginLeft="24sp"
-            android:layout_marginRight="24sp"
-            android:layout_marginBottom="24sp"
+            android:layout_marginLeft="16sp"
+            android:layout_marginRight="16sp"
+            android:layout_marginBottom="16sp"
             android:enabled="false"
             android:textIsSelectable="false"
             android:ellipsize="start"
@@ -66,11 +67,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="lbs -> kg"
+            android:text="@string/kilogrami"
             android:id="@+id/kgTxt"
-            android:textSize="32sp"
+            android:textSize="24sp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="24sp" />
+            android:layout_marginTop="16sp" />
 
         <EditText
             android:layout_width="match_parent"
@@ -80,9 +81,9 @@
             android:id="@+id/kgEdit"
             android:textSize="32sp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="24sp"
-            android:layout_marginRight="24sp"
-            android:layout_marginBottom="24sp"
+            android:layout_marginLeft="16sp"
+            android:layout_marginRight="16sp"
+            android:layout_marginBottom="16sp"
             android:textIsSelectable="false"
             android:layout_marginTop="0sp"
             android:enabled="false"
@@ -90,12 +91,13 @@
             android:gravity="center_horizontal"
             android:textColor="#000000"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/dugmeBtn"
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView"
             android:layout_gravity="center_horizontal"
-            android:onClick="prikazi" />
+            android:src="@drawable/libra"
+            android:contentDescription="slika1" />
+
     </LinearLayout>
 </RelativeLayout>
