add dot at beginning exception

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -33,6 +33,7 @@
             android:hint="@string/zaUneti"
             android:ellipsize="start"
             android:gravity="center_horizontal"
+            android:maxLength="7"
             />
 
         <TextView
