--- a/app/src/main/res/layout/activity_inches.xml
+++ b/app/src/main/res/layout/activity_inches.xml
@@ -30,7 +30,7 @@
             android:layout_marginTop="16sp"
             android:layout_marginRight="16sp"
             android:layout_marginBottom="16sp"
-            android:hint="@string/zaUneti"
+            android:hint="Enter length"
             android:ellipsize="start"
             android:gravity="center_horizontal"
             android:maxLength="7"
@@ -40,8 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/funte"
-            android:id="@+id/lbsTxt"
+            android:text="@string/inci"
+            android:id="@+id/inchesTxt"
             android:textSize="24sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16sp" />
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
-            android:id="@+id/lbsEdit"
+            android:id="@+id/inchEdit"
             android:textSize="32sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="0sp"
@@ -68,8 +68,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/kilogrami"
-            android:id="@+id/kgTxt"
+            android:text="inches -> cm"
+            android:id="@+id/cmTxt"
             android:textSize="24sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16sp" />
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
-            android:id="@+id/kgEdit"
+            android:id="@+id/cmEdit"
             android:textSize="32sp"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="16sp"
@@ -97,10 +97,9 @@
             android:layout_height="match_parent"
             android:id="@+id/imageView"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/libra"
-            android:contentDescription="slika1"
-            android:onClick="slikaOnClick"
-            />
+            android:src="@drawable/path"
+            android:contentDescription="slika2"
+            android:onClick="slikaOnClick" />
 
     </LinearLayout>
 </RelativeLayout>
