--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -44,7 +44,8 @@
             android:id="@+id/lbsTxt"
             android:textSize="24sp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16sp" />
+            android:layout_marginTop="16sp"
+            />
 
         <EditText
             android:layout_width="match_parent"
