Add menu->about (which reads text from external file)

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,7 +12,7 @@
     <item
         android:id="@+id/about"
         android:title="About"
-        />
+        android:orderInCategory="200"/>
 
 
 
