--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,42 +9,69 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.aperslajsgmail.converter.MainActivity"
-    >
+    tools:context="com.aperslajsgmail.converter.MainActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Choose converter"
-        android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="20dp" />
+        android:text="Choose converter"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_marginBottom="35dp"
+        android:layout_marginTop="20dp" />
 
-    <LinearLayout
-        android:orientation="horizontal"
+
+    <ImageView
+        android:id="@+id/imageViewKg"
+        android:layout_width="130dp"
+        android:layout_height="144dp"
+        android:onClick="kgOnClick"
+        android:src="@drawable/weight"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="21dp"
+        android:layout_marginStart="21dp" />
+
+    <ImageView
+        android:id="@+id/imageViewInch"
+        android:layout_width="155dp"
+        android:layout_height="123dp"
+        android:layout_gravity="right"
+        android:onClick="inchOnClick"
+        android:src="@drawable/drawing1"
+        android:layout_alignTop="@+id/imageViewKg"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="19dp"
+        android:layout_marginEnd="19dp" />
+
+
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textView"
-        android:weightSum="1"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp">
+        android:text="kg &lt;-> lbs"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@+id/imageViewKg"
+        android:layout_alignLeft="@+id/imageViewKg"
+        android:layout_alignStart="@+id/imageViewKg"
+        android:layout_marginLeft="18dp"
+        android:layout_marginStart="18dp" />
 
-        <ImageView
-            android:layout_width="130dp"
-            android:layout_height="144dp"
-            android:id="@+id/imageViewKg"
-            android:src="@drawable/weight"
-            android:onClick="kgOnClick" />
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:text="cm &lt;-> inch"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_marginRight="39dp"
+        android:layout_marginEnd="39dp"
+        android:layout_below="@+id/imageViewKg"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-        <ImageView
-            android:layout_width="155dp"
-            android:layout_height="123dp"
-            android:id="@+id/imageViewInch"
-            android:src="@drawable/drawing1"
-            android:layout_gravity="right"
-            android:onClick="inchOnClick" />
-    </LinearLayout>
 </RelativeLayout>
