--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="35dp"
         android:layout_marginTop="20dp"
-        android:text="Choose converter"
+        android:text="Choose converter:"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <RelativeLayout
@@ -95,7 +95,7 @@
             android:id="@+id/imageViewTime"
             android:layout_width="155dp"
             android:layout_height="123dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="40dp"
             android:onClick="timeOnClick"
             android:src="@drawable/clock1" />
@@ -112,16 +112,31 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignTop="@+id/relativeLayout3"
-        android:layout_alignEnd="@+id/relativeLayout">
+        android:layout_alignEnd="@+id/relativeLayout"
+        android:id="@+id/relativeLayout4">
 
-        <ImageButton
+        <ImageView
+            android:layout_width="144dp"
+            android:layout_height="144dp"
+            android:id="@+id/imageView2"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/truck"
+            android:layout_marginTop="30dp"
+            android:onClick="milesOnClick" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageButton"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="km &lt;-> miles"
+            android:id="@+id/textView13"
+            android:layout_below="@+id/imageView2"
+            android:layout_centerHorizontal="true" />
+
     </RelativeLayout>
+
 </RelativeLayout>
