--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -65,7 +65,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/textView3"
             android:layout_gravity="right"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="7dp"
             android:layout_marginRight="19dp"
             android:onClick="inchOnClick"
             android:src="@drawable/drawing1" />
@@ -98,7 +98,8 @@
             android:layout_marginBottom="10dp"
             android:layout_marginTop="40dp"
             android:onClick="timeOnClick"
-            android:src="@drawable/clock1" />
+            android:src="@drawable/clock1"
+            android:layout_marginLeft="10dp" />
 
         <TextView
             android:id="@+id/textView8"
@@ -106,7 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageViewTime"
             android:layout_centerHorizontal="true"
-            android:text="Time zones"
+            android:text="  Time zones"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </RelativeLayout>
