Change dp to sp on Clock. Add margin to length pic.

--- a/app/src/main/res/layout/activity_inches.xml
+++ b/app/src/main/res/layout/activity_inches.xml
@@ -99,7 +99,8 @@
             android:layout_gravity="center_horizontal"
             android:src="@drawable/tool"
             android:contentDescription="slika2"
-            android:onClick="slikaOnClick" />
+            android:onClick="slikaOnClick"
+            android:layout_margin="5sp" />
 
     </LinearLayout>
 </RelativeLayout>
