--- a/app/src/main/res/layout/activity_time.xml
+++ b/app/src/main/res/layout/activity_time.xml
@@ -39,7 +39,7 @@
                         android:layout_marginBottom="20dp"
                         android:text="GMT (London)"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textSize="30dp" />
+                        android:textSize="30sp" />
 
                     <TextView
                         android:id="@+id/textView5"
@@ -48,7 +48,7 @@
                         android:layout_marginBottom="20dp"
                         android:text="CET (Paris)"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textSize="30dp" />
+                        android:textSize="30sp" />
 
                     <TextView
                         android:id="@+id/textView6"
@@ -57,7 +57,7 @@
                         android:layout_marginBottom="20dp"
                         android:text="EST (New York)"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textSize="30dp" />
+                        android:textSize="30sp" />
 
                     <TextView
                         android:id="@+id/textView7"
@@ -66,7 +66,7 @@
                         android:layout_marginBottom="20dp"
                         android:text="CST (Chicago)"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textSize="30dp" />
+                        android:textSize="30sp" />
 
                     <TextView
                         android:id="@+id/textView8"
@@ -75,7 +75,7 @@
                         android:layout_marginBottom="20dp"
                         android:text="MST (Phoenix)"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textSize="30dp" />
+                        android:textSize="30sp" />
 
                     <TextView
                         android:id="@+id/textView9"
@@ -84,7 +84,7 @@
                         android:layout_marginBottom="20dp"
                         android:text="PST (LA)"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textSize="30dp" />
+                        android:textSize="30sp" />
 
                     <TextView
                         android:id="@+id/textView10"
@@ -93,7 +93,7 @@
                         android:layout_marginBottom="20dp"
                         android:text="MSK (Moscow)"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textSize="30dp" />
+                        android:textSize="30sp" />
 
                     <TextView
                         android:id="@+id/textView11"
@@ -102,7 +102,7 @@
                         android:layout_marginBottom="20dp"
                         android:text="JST (Tokyo)"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textSize="30dp" />
+                        android:textSize="30sp" />
 
                     <TextView
                         android:id="@+id/textView12"
@@ -111,7 +111,7 @@
                         android:layout_marginBottom="20dp"
                         android:text="AEDT (Sydney)"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textSize="30dp" />
+                        android:textSize="30sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -125,7 +125,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
                         android:format12Hour="hh:mm a"
-                        android:textSize="30dp"
+                        android:textSize="30sp"
                         android:timeZone="GMT" />
 
                     <TextClock
@@ -134,7 +134,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
                         android:format12Hour="hh:mm a"
-                        android:textSize="30dp"
+                        android:textSize="30sp"
                         android:timeZone="GMT+0100" />
 
                     <TextClock
@@ -143,7 +143,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
                         android:format12Hour="hh:mm a"
-                        android:textSize="30dp"
+                        android:textSize="30sp"
                         android:timeZone="GMT-0500" />
 
                     <TextClock
@@ -152,7 +152,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
                         android:format12Hour="hh:mm a"
-                        android:textSize="30dp"
+                        android:textSize="30sp"
                         android:timeZone="GMT-0600" />
 
                     <TextClock
@@ -161,7 +161,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
                         android:format12Hour="hh:mm a"
-                        android:textSize="30dp"
+                        android:textSize="30sp"
                         android:timeZone="GMT-0700" />
 
                     <TextClock
@@ -170,7 +170,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
                         android:format12Hour="hh:mm a"
-                        android:textSize="30dp"
+                        android:textSize="30sp"
                         android:timeZone="GMT-0800" />
 
                     <TextClock
@@ -179,7 +179,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
                         android:format12Hour="hh:mm a"
-                        android:textSize="30dp"
+                        android:textSize="30sp"
                         android:timeZone="GMT+0300" />
 
                     <TextClock
@@ -188,7 +188,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
                         android:format12Hour="hh:mm a"
-                        android:textSize="30dp"
+                        android:textSize="30sp"
                         android:timeZone="GMT+0900" />
 
                     <TextClock
@@ -197,7 +197,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
                         android:format12Hour="hh:mm a"
-                        android:textSize="30dp"
+                        android:textSize="30sp"
                         android:timeZone="GMT+1100" />
 
                 </LinearLayout>
